<resources>
    <string name="app_name">Prys</string>
    <string name="facebook_app_id">1585874205045826</string>
    <string name="login_activity_title">Login</string>
    <string name="login_email_field_hint">Email Address</string>
    <string name="login_password_field_hint">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="invalid_email_error">Please enter a valid email</string>
    <string name="logging_in_message">Logging in..</string>
    <string name="ok">OK</string>
    <string name="login_error">LOGIN ERROR</string>
    <string name="login_register_button">CREATE NEW ACCOUNT</string>
    <string name="register_activity_title">Create New Account</string>
    <string name="register_fullname_field_hint">Full Name</string>
    <string name="register_email_field_hint">Email</string>
    <string name="register_password_field_hint">Password</string>
    <string name="register_button">CREATE ACCOUNT</string>
    <string name="invalid_fullname">Please enter a valid full name</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="invalid_password">Password must be at least 8 characters and contain at least 1 upper case, 1 lower case, and 1 number</string>
    <string name="creating_account">Creating new account..</string>
    <string name="login_with_email">LOGIN WITH EMAIL</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_facebook_error_message">Please try again in a few minutes!</string>
    <string name="home_activity_title">Home Activity</string>
</resources>
