<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/register_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" >

            <android.support.v7.widget.Toolbar
                app:title="@string/register_activity_title"
                android:id="@+id/register_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/margin_xl"
            tools:context=".activity.RegisterActivity">

            <!--
            DUMMY LAYOUT TO PREVENT EDITTEXT FROM GETTING THE FOCUS WHEN THE ACTIVITY STARTS!!
            THIS IS A HACK!!!
            http://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-activity-startup
            -->
            <View
                android:focusableInTouchMode="true"
                android:layout_width="0px"
                android:layout_height="0px" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_sm"
                android:paddingLeft="@dimen/padding_lg"
                android:paddingRight="@dimen/padding_lg">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/register_fullname_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/text_input_layout_error_appearance">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_fullname_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/register_fullname_field_hint"
                        android:fontFamily="sans-serif-medium"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/register_email_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/text_input_layout_error_appearance">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_email_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/register_email_field_hint"
                        android:fontFamily="sans-serif-medium"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/register_password_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/text_input_layout_error_appearance">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_password_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textWebPassword"
                        android:hint="@string/register_password_field_hint"
                        android:fontFamily="sans-serif-medium"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_sm"
                android:paddingLeft="@dimen/padding_lg"
                android:paddingRight="@dimen/padding_lg">

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_xs"
                    android:text="@string/register_button"
                    android:onClick="registerUser"
                    android:enabled="false"
                    style="@style/button_primary" />

            </LinearLayout>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</ScrollView>